src/Code/Parser/Mlang.g4
grammar Mlang;

program
    : (variableDecl | functionDecl | classDecl) *
    ;

classDecl
    : CLASS ID '{' (functionDecl | variableDecl)* '}'
    ;

functionDecl
    : type? ID '('(parameter (','parameter)*)?')' block
    ;

variableDecl
    : type ID '=' expression';'
    | type ID ';'
    ;

parameter 
    : type ID
    ;


builtInType
    : BOOL | INT | STRING | VOID
    ;

userType : ID;
arrayType : (builtInType | userType) ('['']')+;

type
    : (arrayType | builtInType | userType)
    ;

block
    : '{' statement* '}'
    ;

statement
    : block                                                     #blockStat
    | variableDecl                                              #varDeclStat
    | IF '('expression')' statement (ELSE statement)?           #ifStat
    | FOR '('init=expression?';'
             cond=expression?';'
             update=expression?')' statement                    #forStat
    | WHILE '('expression ')' statement                         #whileStat
    | RETURN '(' expression ')' ';'                             #returnStat
    | BREAK ';'                                                 #breakStat
    | CONTINUE ';'                                              #continueStat
    | expression ';'                                            #exprStat
    | ';'                                                       #emptyStat
    ;

actual_parameter
    : expression (',' expression)*
    ;

expression 
    : expression '.' ID                                         #memberExpr
    | expression '[' expression ']'                             #arrayExpr
    | expression op=('++'|'--')                                 #suffixExpr
    | ID '(' actual_parameter ')'                               #callExpr
    | op=('++'|'--') expression                                 #prefixExpr
    | op=('+'|'-') expression                                   #prefixExpr
    | op=('!'|'~') expression                                   #prefixExpr
    | NEW type (('['expression']')+ ('[]')*)?                   #newExpr
    | expression op=('*'|'/'|'%') expression                    #binaryExpr
    | expression op=('+'|'-') expression                        #binaryExpr
    | expression op=('<<'|'>>') expression                      #binaryExpr
    | expression op=('<'|'<='|'>'|'>=') expression              #binaryExpr
    | expression op=('=='|'!=') expression                      #binaryExpr
    | expression '&' expression                                 #binaryExpr
    | expression '^' expression                                 #binaryExpr
    | expression '|' expression                                 #binaryExpr
    | expression '&&' expression                                #andExpr
    | expression '||' expression                                #orExprt
    | NUM                                                       #intConstExpr
    | TRUE                                                      #boolConstExpr
    | FALSE                                                     #boolConstExpr
    | NULL                                                      #nullExpr
    | STR                                                       #stringConstExpr
    | ID                                                        #idExpr
    | '(' expression ')'                                        #subExpr
    | THIS                                                      #thisExpr
    | expression '=' expression                                 #assignExpr
    ;


BOOL    : 'bool';
INT     : 'int';
STRING  : 'string';
NULL    : 'null';
VOID    : 'void';

TRUE    : 'true';
FALSE   : 'false';
IF      : 'if';
ELSE    : 'else';
FOR     : 'for';
WHILE   : 'while';

BREAK   : 'break';
CONTINUE   : 'continue';
RETURN   : 'return';

NEW     : 'new';
CLASS   : 'class';
THIS    : 'this';

NUM     : [0-9]+;
ESC     : '\\"' | '\\\\' | '\\n';
STR     : '"'(ESC|.)*?'"';

COMMENT : '//';
MUL     : '*';
DIV     : '/';
ADD     : '+';
SUB     : '-';

ID      : [a-zA-Z]+[a-zA-Z_]*;
WS      : [ \t\n\r]+ -> skip;
